# backend/controllers/category.js
@@ -44,9 +44,7 @@ exports.read = (req, res) => {
       .populate("categories", "_id name slug")
       .populate("tags", "_id name slug")
       .populate("postedBy", "_id name")
-      .select(
-        "_id title slug excerpt categories postedBy tags createdAt updatedAt"
-      )
+      .select("_id title slug categories postedBy tags createdAt updatedAt")
       .exec((err, data) => {
         if (err) {
           return res.status(400).json({
